# aaabbb

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  publish.yml
aaabbb/: __init__.py  __main__.py
test/: test_client.py
